syntax = "proto3";

option csharp_namespace = "EnduroPortal.GrpcServer";

package participiant;

service Participiants {

  rpc AddParticipiant (AddParticipiantRequest) returns (AddParticipiantResponse){};

  rpc RemoveParticipiant (RemovePatricipianRequest) returns (RemovePatricipianResponse){};

  rpc GetParticipiants (GetParticipiantsRequest) returns (GetParticipiantsResponse){};
}

message AddParticipiantRequest {
	string EventSlug = 1;
	string Name = 2;
	string Phone = 3;
	string Email = 4;
}

message AddParticipiantResponse {
	string Result = 1;
}

message RemovePatricipianRequest{
	string Email = 1;
	string EventSlug = 2;
}

message RemovePatricipianResponse{
	string Result = 1;
}

message GetParticipiantsRequest{
	string EventSlug = 1;
}

message GetParticipiantsResponse{
	repeated ParticipiantDesc Participiants = 1;
}

message ParticipiantDesc{
	string Name = 1;
	string EventSlug = 2;
	string Email = 3;
	string Phone = 4;
}